force-app/main/default/objects/Krow__PipeDrive_Integration__c/Krow__PipeDrive_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PipeDrive Integration</label>
</CustomObject>