force-app/main/default/objects/Krow__PipeDrive_Integration__c/fields/Krow__API_URL__c.field-meta.xml
<CustomField>
    <fullName>Krow__API_URL__c</fullName>
    <label>API URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>