force-app/main/default/objects/Krow__PipeDrive_Integration__c/fields/Krow__Default_Project_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Project_User_Email__c</fullName>
    <label>Default Project User Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>