force-app/main/default/objects/Krow__PipeDrive_Integration__c/fields/Krow__Filter_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Filter_Id__c</fullName>
    <label>Filter Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>