force-app/main/default/objects/Krow__PipeDrive_Integration__c/fields/Krow__hapikey__c.field-meta.xml
<CustomField>
    <fullName>Krow__hapikey__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>